# do-or-dice

./: .env.example  Docker-compose.yml  build.py  main.py  prototype_.py  pyproject.toml  requirements.txt  run_game.py  workflow.md
.github/workflows/: ci.yml
controllers/: api.py  orchestrator.py
database/: config.py
docs/: contribution.md
helpers/: randomizer.py
models/: Dice.py  Player.py
services/: History.py  Rank.py  TurnResolver.py  types.py
src/: Dockerfile.prod
src/configs/: constants.py
src/controllers/: __init__.py  api.py  orchestrator.py
src/database/: config.py
src/docs/: contribution.md
src/helpers/: randomizer.py
src/models/: Dice.py  Player.py  __init__.py
src/services/: History.py  Rank.py  TurnResolver.py  __init__.py  types.py
src/tests/: test_env_vars.py  test_game_integration.py  test_history_player.py  test_player.py  test_rank.py
src/utils/: __init__.py  exceptions.py  valdidators.py
tests/: test_env_vars.py  test_game_integration.py  test_history_player.py  test_player.py  test_rank.py
ui/: __init__.py  components.py  game.py  player_profiles.py  theme.py
utils/: __init__.py  valdidators.py
web/: Dockerfile.prod  docker-compose.yml  package-lock.json  package.json
web/app/: globals.css
web/components/: dice-scene.tsx  download-section.tsx  features-section.tsx  footer.tsx  gameplay-section.tsx  hero-section.tsx  navigation.tsx  rules-section.tsx
